# crabby

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Crabby.rb  Dockerfile  README.md  ROADMAP.md  SECURITY.md  all-contributorsrc.txt  build.rs  clippy.toml  default.nix  flake.nix  rustfmt.toml  version.txt
.github/workflows/: build.yml  crates-publish.yml  docker-publish.yml  macos-homebrew.yml  test_crabby.yml
docs/: CRAB VIRTUAL MACHINE.docx  CRABVIRTUALMACHINE.md  FAQs.md  FFIs.md  INLINE_ASSEMBLY.md  KEYWORDS.md  MEMORY.md  MODULES.md  PHILOSOPHY.md
examples/: README.md  arrays.crab  assembly.crab  asserts.crab  async_await.crab  comprehensions.crab  constants.crab  decorators.crab  doesithoist.crab  encapsulation.crab  enums.crab  example.crab  export.crab  externs.crab  foreign.crab  functions.crab  generics.crab  hof.crab  ifelse.crab  imports.crab  inheritance.crab  interfaces.crab  iters().crab  lambda.crab  loops.crab  macros.crab  mapping.crab  matching.crab  math.crab  maybeprobably.crab  network.crab  optional_nullable.crab  ownership.crab  ownership_borrowing.crab  paint.crab  pipelines.crab  private_public.crab  recursions.crab  self.crab  statics.crab  (+8 more)
examples/high/: arrays.crab  asserts.crab  async_await.crab  autovivification.crab  channeling.crab  comprehensions.crab  datatypes.crab  enums.crab  export.crab  generics.crab  hof.crab  ifelse.crab  imports.crab  lambda.crab  loops.crab  macros.crab  mapping.crab  math_pi.crab  optional_nullable.crab  private_public.crab  recursions.crab  routines.crab  structs.crab  yield.crab
examples/low/: FFI.crab  assembly.crab  externs.crab  ownership_borrowing.crab  pointers.crab  statics.crab  unions.crab  unsafecrabby.crab
extension/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package.json
libs/std/: core.crab  (+1 more)
package/: default.nix
pkgs/: PKGBUILD  default.nix
src/: compile.rs  crypto.rs  deadcode.rs  docgen.rs  interpreter.rs  macros.rs  main.rs  modules.rs  repl.rs  runtime.rs  utils.rs  value.rs  wasm.rs
(+47 files in other folders)
