[package]
name = "crabby"
description = "A modern Programming Language with Python like syntax but has a functional language feature."
authors = ["Kazooki123"]
keywords = ["language", "python", "programming-language", "modern"]
version = "1.2.1"
repository = "https://github.com/crabby-lang/crabby"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
logos = "0.13"
thiserror = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
codespan-reporting = "0.11"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2.169"
nix = "0.29.0"
rayon = "1.10.0"
mimalloc = "0.1.43"
jemallocator = "0.5.4"
periphery = "0.1.0"
ring = "0.17.8"
rand = "0.9.0"
rust-crypto = "0.2.36"
bindgen = "0.71.1"
x86_64 = "0.15.2"
riscv = "0.12.1"
embedded-hal = "1.0.0"
serde = "1.0"
ash = "0.38.0"
libloading = "0.8.6"
